Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-32920

Dragging a MouseArea nested in a Flickable does not work with touch to mouse translation

    XMLWordPrintable

Details

    • 566afc2d2e4156712ffec081715f12307cf46628 b01b2474bb4c901a60a528c66f8b0ae8dd14e975

    Description

      A MouseArea with a drag target nested in a Flickable does not work. This is due to QQuickWindow calling sendFilteredMouseEvent() twice - once in sendFilteredTouchEvent() and later in sendEvent().

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            martinj Martin Jones
            martinj Martin Jones
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes