Dragging MouseArea nested in Flickable does not work with touch to mouse

A MouseArea with a drag target nested in a Flickable does not work.
This is due to QQuickWindow calling childMouseEventFilter() twice -
once in sendFilteredTouchEvent() and later in sendEvent().

Since childMouseEventFilter() has already been called, deliver the
mouse event directly in sendFilteredTouchEvent().

Task-number: QTBUG-32920
Change-Id: I22acee3c66ee6c06e71c9c876fb02dbcb6119a8d
Reviewed-by: Andrew den Exter <andrew.den.exter@qinetic.com.au>